stop stretching images: insteac use background-size:cover

--- a/assets/css/agnostic.css
+++ b/assets/css/agnostic.css
@@ -17,7 +17,7 @@ a.thumbnail {
     margin-bottom: 5px;
     min-height: 15em;
     overflow: hidden;
-    background-size: 100%;
+    background-size: cover;
 }
 
 div.recipe-img-crop {
